--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # History files
 .Rhistory
 .Rapp.history
+Select.Rproj
 
 # Session Data files
 .RData
@@ -31,3 +32,4 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.Rproj.user
